POD/configmap-pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo-2
  labels:
    app: nginx-3rd
spec:
  containers:
  - name: shell-demo-container-1
    image: nginx
    volumeMounts:
      - name: car-vol
        mountPath: /etc/cars
  volumes:
    - name: car-vol
      configMap:
        name: colors
