POD/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
  labels:
    app: nginx-shell
spec:
  containers:
  - name: shell-demo-container
    image: nginx
    ports:
      - containerPort: 80
