POD/fluentd-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    app: kudekloud
spec:
  replicas:
  template:
    metadata:
      name: elasticsearch-pod
      labels:
        app: kodekloud
    spec:
      containers:
      - name: elasticsearch
        image: k8s.gcr.io/fluentd-elasticsearch:1.20
  selector:
     matchLabels:
       app: kodekloud
