POD/nodeselector-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: myos
spec:
  containers:
  - name: busybox-container
    image: busybox
    args:
      - sleep
      - "1000000"
  - name: busybox-container-2
    image: busybox
    args:
    - sleep
    - "10000"

  nodeSelector:
    status: vip #Create a label at the node level using kubectl label nodes node-name key=value.
