POD/webapp-green.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  labels:
    color: green
spec:
  containers:
  - name: webapp-color
    image: kodekloud/webapp-color
