POD/ingress-resource-test.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata:
  name: ghost
spec:
  rules:
    - host: ghost.192.168.99.100.nip.io
http:
paths:
    - backend:
            serviceName: ghost
            servicePort: 2368
